2007-02-27  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/formats/mol2format.cpp: Fix PR#1666406 with mis-typed Sybyl
	atom types.

	* data/types.txt, data/types.h: Likewise.

2007-02-26  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/formats/inchiformat.cpp: Fix compile problems on GCC.

	* src/mol.cpp: Fix PR#(PR#1665519) with AddHydrogens when no
	conformers are available.

	* Doxyfile: Remove babelconfig and config from header list.

	* src/patty.cpp: Mark as deprecated.

	* src/fingerprint.cpp, src/mol.cpp, src/typer.cpp
	src/parsmart.cpp, : Documentation updates.

	* include/obmolecformat.cpp, src/formats/obmolecformat.cpp,
	include/openbabel/xml.h, include/openbabel/typer.h,
	include/openbabel/parsmart.h, include/openbabel/rand.h, 
	include/openbabel/mol.h: Likewise.

2007-02-26 Chris Morley

	* src/formats/inchiformat.cpp(WriteMolecule): Mods to 0D and 2D
	stereochemistry; more to be done, work in progress.
	Added Option to use InChI options.
	
	* src/formats/mdlformat.cpp(ReadMolecule):Use the content of
	any "NAME"(case independent) property as OBMol title if there
	is not already one.
	
	* src/format/xml/cmlformat.cpp, xml.cpp(GetContent): Add Trim()
	after several cases of xmlTextReaderConstValue to remove any \n
	
	* src/obconversion.cpp(Convert): Add test for pInFormat to avoid
	crash with erroneous input.
	
	* src/mol.cpp(Separate): Copy dimension to each fragment.

2007-02-26  Donald E. Curtis <dcurtis3@sourceforge.net>

	* src/mol.cpp: OBMol::AddBond() / OBMol::DeleteBond() 
	Bond indexing starts at one.  Had to undo the change made by Tim and
	correct the fix on 2007-01-07 as a result of the bulk resizing.

2007-02-25  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/ring.cpp (FindRings): Don't return early if all atoms are
	visited. Some atoms may be in multiple rings and will be visited
	more than once on a graph traversal.

2007-02-25  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/mol.cpp: OBMol::DeleteBond()